--- a/numpy/getting-started-with-numpy-part-01.ipynb
+++ b/numpy/getting-started-with-numpy-part-01.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
       "ones.shape: (5,)\n",
       "zeros: [0. 0. 0. 0. 0.]\n",
       "zeros.shape: (5,)\n",
-      "random: [0.5743136  0.77721631 0.90196822 0.26154974 0.37180351]\n",
+      "random: [0.92058909 0.32292432 0.34403503 0.36371273 0.13475017]\n",
       "random.shape: (5,)\n"
      ]
     }
@@ -101,9 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add_result:  [2. 3. 4. 5. 6.]\n",
+      "subtraction_result:  [0. 1. 2. 3. 4.]\n",
+      "multiplication_result:  [1. 2. 3. 4. 5.]\n",
+      "division_result:  [1. 2. 3. 4. 5.]\n",
+      "element_multiplication_result:  [1.5 3.  4.5 6.  7.5]\n"
+     ]
+    }
+   ],
    "source": [
     "add_result = data + ones\n",
     "subtraction_result = data - ones\n",
@@ -127,9 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data:  [1 2 3 4 5]\n",
+      "data[0]:  1\n",
+      "data[1]:  2\n",
+      "data[0:2]:  [1 2]\n",
+      "data[1:]:  [2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "print('data: ',data)\n",
     "print('data[0]: ',data[0])\n",
@@ -147,9 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.max():  5\n",
+      "data.min():  1\n",
+      "data.sum():  15\n"
+     ]
+    }
+   ],
    "source": [
     "print('data.max(): ',data.max())\n",
     "print('data.min(): ',data.min())\n",
@@ -158,9 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_2d:  [[1 2 3 4 5]\n",
+      " [6 7 8 9 0]]\n",
+      "ones_2d:  [[1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n",
+      "zeros_2d:  [[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n",
+      "random_2d:  [[0.03505572 0.34442154 0.33962285 0.44026611 0.86149997]\n",
+      " [0.30587031 0.98381489 0.25107596 0.08137569 0.05600544]]\n"
+     ]
+    }
+   ],
    "source": [
     "data_2d = np.array([[1, 2, 3, 4, 5],[6,7,8,9,0]])\n",
     "ones_2d = np.ones((2,5))\n",
@@ -183,9 +232,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "add_result_2d:  [[ 2.  3.  4.  5.  6.]\n",
+      " [ 7.  8.  9. 10.  1.]]\n",
+      "subtraction_result_2d:  [[ 0.  1.  2.  3.  4.]\n",
+      " [ 5.  6.  7.  8. -1.]]\n",
+      "multiplication_result_2d:  [[1. 2. 3. 4. 5.]\n",
+      " [6. 7. 8. 9. 0.]]\n",
+      "division_result_2d:  [[1. 2. 3. 4. 5.]\n",
+      " [6. 7. 8. 9. 0.]]\n",
+      "element_multiplication_result_2d:  [[ 2.5  3.5  4.5  5.5  6.5]\n",
+      " [ 7.5  8.5  9.5 10.5  1.5]]\n"
+     ]
+    }
+   ],
    "source": [
     "add_result_2d = data_2d + ones_2d\n",
     "subtraction_result_2d  = data_2d - ones_2d\n",
@@ -209,9 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ones_1d:  [1. 1. 1. 1. 1.]\n",
+      "add_result_2d:  [[ 2.  3.  4.  5.  6.]\n",
+      " [ 7.  8.  9. 10.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "ones_1d = np.ones(5)\n",
     "print('ones_1d: ', ones_1d)\n",
@@ -228,9 +304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dot_product_result_1: 14\n",
+      "dot_product_result_2: [ 6 12]\n"
+     ]
+    }
+   ],
    "source": [
     "data_2 = np.array([1,2,3])\n",
     "data_3 = np.array([1,2,3])\n",
@@ -250,9 +335,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data:  [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "data[0,1]:  2\n",
+      "data[1:3]:  [[3 4]\n",
+      " [5 6]]\n",
+      "data[0:2,0]:  [1 3]\n"
+     ]
+    }
+   ],
    "source": [
     "data = np.array([[1,2],[3,4],[5,6]])\n",
     "print('data: ',data)\n",
@@ -270,9 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.max():  6\n",
+      "data.min():  1\n",
+      "data.sum():  21\n",
+      "data.max(axis=0):  [5 6]\n",
+      "data.max(axis=1):  [2 4 6]\n"
+     ]
+    }
+   ],
    "source": [
     "print('data.max(): ',data.max())\n",
     "print('data.min(): ',data.min())\n",
@@ -291,9 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.reshape(2,3):  [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "data.reshape(3,2):  [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "data = np.array([1,2,3,4,5,6])\n",
     "\n",
@@ -310,9 +433,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data_multi_ones:  [[[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]]\n",
+      "data_multi_zeros:  [[[0. 0.]\n",
+      "  [0. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[0. 0.]\n",
+      "  [0. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[0. 0.]\n",
+      "  [0. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[0. 0.]\n",
+      "  [0. 0.]\n",
+      "  [0. 0.]]]\n",
+      "data_multi_random:  [[[0.72535613 0.91444772]\n",
+      "  [0.39594296 0.49410375]\n",
+      "  [0.74145104 0.03007312]]\n",
+      "\n",
+      " [[0.99024105 0.72364944]\n",
+      "  [0.04851409 0.75274374]\n",
+      "  [0.78456259 0.93692941]]\n",
+      "\n",
+      " [[0.64504812 0.97807936]\n",
+      "  [0.41404032 0.26667585]\n",
+      "  [0.31517936 0.18102424]]\n",
+      "\n",
+      " [[0.96716937 0.22365156]\n",
+      "  [0.49191569 0.38951694]\n",
+      "  [0.78410031 0.03418828]]]\n"
+     ]
+    }
+   ],
    "source": [
     "data_multi_ones = np.ones((4,3,2))\n",
     "data_multi_zeros = np.zeros((4,3,2))\n",
@@ -332,9 +507,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error:  1.6666666666666665\n"
+     ]
+    }
+   ],
    "source": [
     "# formula: mean-square-error = (1/n) sigma (i=1 to n)square of ((prediction(i) - y(i)))\n",
     "predictions = np.array([1,1,1])\n",
